# demo-simple-iceberg

./: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: run-tests.yml
demo_warehouse/: catalog.json
demo_warehouse/analytics/images/data/: 00000-0-30c3437b-471f-476f-bc0f-e86fb6d692ea.parquet  00000-0-d0692cee-51ee-4f67-8bda-8b86555f83ca.parquet
demo_warehouse/analytics/images/metadata/: 00000-26c04c97-9e86-4a22-84d4-6ecd9fe2475e.metadata.json  00000-5e80c387-1e2f-4521-9c28-4791852c1993.metadata.json  00000-a2f7d97c-12f6-426c-9a92-e60c17b206da.metadata.json  00001-4a8dbda8-651c-479e-aa42-d25959289431.metadata.json  00001-5831aedc-2e66-464e-9ddc-77cf2a4a11d4.metadata.json  00001-996d0af1-fc9b-4880-9db7-5c733991c19c.metadata.json  30c3437b-471f-476f-bc0f-e86fb6d692ea-m0.avro  d0692cee-51ee-4f67-8bda-8b86555f83ca-m0.avro  d5fb461c-96a0-4ada-ba6b-56eab43938c1-m0.avro  snap-3647923770304866044-0-d0692cee-51ee-4f67-8bda-8b86555f83ca.avro  snap-3852894526671269738-0-d5fb461c-96a0-4ada-ba6b-56eab43938c1.avro  snap-8608189250999917756-0-30c3437b-471f-476f-bc0f-e86fb6d692ea.avro
demo_warehouse/analytics/profiles/data/: 00000-0-641b5e33-a014-4b58-84f2-16069833114e.parquet  00000-0-e77ec5ca-917a-4893-9885-ecf4530a21df.parquet
demo_warehouse/analytics/profiles/metadata/: 00000-96a4383c-c5d3-4fd7-882e-2ba2874a02bb.metadata.json  00000-d5abedf4-92f7-4b39-bcb6-ca48cc8ffd33.metadata.json  00000-f76834ca-249a-412a-9528-1b6639db4d8e.metadata.json  00001-6e195f17-b553-4e1f-af46-f5c1b3d28edd.metadata.json  00001-c3ba2d4f-0e3a-4d6d-956d-c9ee6b6e7d3f.metadata.json  00001-cea4abdf-aa09-418e-9813-17a7b4563a2c.metadata.json  641b5e33-a014-4b58-84f2-16069833114e-m0.avro  a7c4a50a-9b2d-4ef0-93c8-0c030327eb55-m0.avro  e77ec5ca-917a-4893-9885-ecf4530a21df-m0.avro  snap-5314158434857015022-0-e77ec5ca-917a-4893-9885-ecf4530a21df.avro  snap-5592645468666444242-0-a7c4a50a-9b2d-4ef0-93c8-0c030327eb55.avro  snap-6371612346939150698-0-641b5e33-a014-4b58-84f2-16069833114e.avro
docs/src/: conf.py  python-api.md
src/demo-simple-iceberg/: cli.py
src/demo_simple_iceberg/: __init__.py  cytotable_access.py  demo.py
src/notebooks/: example_notebook.ipynb  example_notebook.py
tests/: test_cli.py  test_cytotable_access.py  test_demo.py  test_main.py
